--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.6.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<groupId>com.yizheng</groupId>
@@ -31,7 +30,7 @@
 		<dependency>
 			<groupId>com.yizheng</groupId>
 			<artifactId>commons</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0.RELEASE</version>
 		</dependency>
 		<!--consul-->
 		<dependency>
@@ -104,6 +103,14 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
+	<distributionManagement>
+		<repository>
+			<id>nexus</id>
+			<name>releases</name>
+			<url>http://sonatype.egov-china.com/repository/maven-releases/</url>
+		</repository>
+	</distributionManagement>
 
 	<build>
 		<plugins>
