--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:8-jdk-alpine
 VOLUME /tmp
-ADD partybuilding-service-1.0.RELEASE.jar app.jar
-ENTRYPOINT ["sh","-c","java $PARAMS -Djava.security.egd=file:/dev/./urandom -jar /app.jar"]
+ADD partybuilding-service-1.0.RELEASE.jar partybuilding-service.jar
+EXPOSE 9500
+ENTRYPOINT ["sh","-c","java $PARAMS -Djava.security.egd=file:/dev/./urandom -jar /partybuilding-service.jar"]
