--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.6.RELEASE</version>
-		<relativePath></relativePath>
+		<relativePath/>
 	</parent>
 
 	<groupId>com.yizheng</groupId>
@@ -104,14 +104,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-
-	<distributionManagement>
-		<repository>
-			<id>nexus</id>
-			<name>releases</name>
-			<url>http://sonatype.egov-china.com/repository/maven-releases/</url>
-		</repository>
-	</distributionManagement>
 
 	<repositories>
 		<repository>
