Dockerfile ENTRYPOINT修改、配置文件修改

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:8-jdk-alpine
 VOLUME /tmp
 ADD partybuilding-service-1.0.RELEASE.jar partybuilding-service.jar
 EXPOSE 9500
-ENTRYPOINT ["sh","-c","java $PARAMS -Djava.security.egd=file:/dev/./urandom -jar /partybuilding-service.jar"]
+ENTRYPOINT ["java","-jar","/partybuilding-service.jar"]
