--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,9 +18,6 @@ spring:
     # 采样比率 1.0 全部需要
     sampler:
       probability: 1.0
-  # zipkin
-  zipkin:
-    baseUrl: http://192.168.5.251:9412
   # rabbitmq配置
   rabbitmq:
     addresses: 192.168.5.251:5672
@@ -68,7 +65,6 @@ mybatis-plus:
     #自定义SQL注入器
     sql-injector: com.baomidou.mybatisplus.mapper.LogicSqlInjector
   configuration:
-    interceptions: com.yizheng.partybuilding.config.PbMybatisInterceptor
     map-underscore-to-camel-case: true
     cache-enabled: true
 
@@ -99,10 +95,13 @@ hystrix:
     default:
       execution:
         isolation:
+          # 隔离策略
           strategy: SEMAPHORE
           thread:
+            # 超时时间
             timeoutInMilliseconds: 6000
   shareSecurityContext: true
+
 
 # 请求处理的超时时间
 ribbon:
