--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -6,7 +6,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: party
     password:  3bf9d1f7f0e13723a6ff
-    url: jdbc:mysql://119.23.215.202:8017/partbuilding?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
+    url: jdbc:mysql://${mysql.ip}:${mysql.port}/partbuilding?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
     hikari:
       maximum-pool-size: 20
       minimum-idle: 5
