--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,9 +4,9 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    username: party
-    password:  3bf9d1f7f0e13723a6ff
-    url: jdbc:mysql://${mysql.ip}:${mysql.port}/partbuilding?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
+    username: root
+    password:  123456
+    url: jdbc:mysql://${mysql.ip}:${mysql.port}/partybuilding?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
     hikari:
       # 池中允许的最大连接数
       maximum-pool-size: 5
