--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>com.egov-china.partybuilding</groupId>
 	<artifactId>partybuilding-service</artifactId>
-	<version>1.0.RELEASE</version>
+	<version>1.1.RELEASE</version>
 	<name>partybuilding-service</name>
 	<description>智慧党建党建服务（党员、党组织）</description>
 
@@ -23,7 +23,7 @@
 		<spring-boot.version>2.0.6.RELEASE</spring-boot.version>
 		<spring-cloud.version>Finchley.SR2</spring-cloud.version>
 		<docker.image.prefix>egov-china</docker.image.prefix>
-		<docker.host>http://192.168.5.251:2375</docker.host>
+		<docker.host>http://192.168.1.251:2375</docker.host>
 	</properties>
 
 	<dependencies>
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>com.egov-china.partybuilding</groupId>
 			<artifactId>common</artifactId>
-			<version>1.0.RELEASE</version>
+			<version>1.1.RELEASE</version>
 		</dependency>
 		<!--consul-->
 		<dependency>
@@ -84,6 +84,11 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream-binder-rabbit</artifactId>
+		</dependency>
+		<!--actuator-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<!--Test-->
 		<dependency>
