--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>com.egov-china.partybuilding</groupId>
 	<artifactId>partybuilding-service</artifactId>
-	<version>1.1.RELEASE</version>
+	<version>1.0.0.RELEASE</version>
 	<name>partybuilding-service</name>
 	<description>智慧党建党建服务（党员、党组织）</description>
 
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>com.egov-china.partybuilding</groupId>
 			<artifactId>common</artifactId>
-			<version>1.1.RELEASE</version>
+			<version>${project.version}</version>
 		</dependency>
 		<!--consul-->
 		<dependency>
