#APB-1077 日志收集相关信息调整 work 15m

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,6 +43,9 @@ spring:
         - partybuilding
         service-name: partybuilding
         instance-id: partybuilding-${random.value}
+  data:
+    mongodb:
+      uri: mongodb://192.168.1.251:27017/test
 
 # mybatis-plus
 mybatis-plus:
